Add setup UI for minimum delay between an app's notification sounds
Change-Id: I70e9cc308b4f7c7681457a0b09dd73e5d1aebb73

--- a/res/values-vi/lotus_strings.xml
+++ b/res/values-vi/lotus_strings.xml
@@ -364,4 +364,15 @@
     <string name="battery_estimate_position_title">Vị trí ước tính pin</string>
     <string name="battery_estimate_position_qsheader">Tiêu đề QS</string>
     <string name="battery_estimate_position_qspanel">Bảng Cài đặt nhanh</string>
+	
+	<!-- Notification sound timeout -->
+    <string name="app_notification_sound_timeout_title">Thời gian tối thiểu giữa các âm thanh thông báo</string>
+    <string name="app_notification_sound_timeout_summary_template">Cho phép âm thanh hoặc rung không quá một lần mọi khi<xliff:g id="duration">%1$s</xliff:g></string>
+    <string name="app_notification_sound_timeout_value_none">Không giới hạn</string>
+    <string name="app_notification_sound_timeout_value_10_seconds">10 giây</string>
+    <string name="app_notification_sound_timeout_value_30_seconds">30 giây</string>
+    <string name="app_notification_sound_timeout_value_1_minute">1 phút</string>
+    <string name="app_notification_sound_timeout_value_5_minutes">5 phút</string>
+    <string name="app_notification_sound_timeout_value_15_minutes">10 phút</string>
+    <string name="app_notification_sound_timeout_value_30_minutes">30 phút</string>
 </resources>
