Add LotusOS settings dashboard
abc edits:
1) Move Abc dashboard tile on bottom before System Settings
(rom settings are mostly a set and forget thing, let's give
more importance to other tiles)
2) add path to proguard
3) keep aapt2 enabled

Evo edits:
1) Adapt PE codes to LotusOS
2) Make Lotus icon match others for Pie

Change-Id: Ie4fb589a6099ef6a3339f2cb7213a2aa012119e5

--- a/res/values/lotus_strings.xml
+++ b/res/values/lotus_strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (C) 2007 The Android Open Source Project
+     Copyright (C) 2019 The LotusOS Project
+
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -25,4 +27,9 @@
     <string name="security_settings_fingerprint_enroll_find_sensor_message_front" product="tablet">Locate the fingerprint sensor on the front of your tablet.</string>
     <string name="security_settings_fingerprint_enroll_find_sensor_message_left" product="tablet">Locate the fingerprint sensor on the left side of your tablet.</string>
     <string name="security_settings_fingerprint_enroll_find_sensor_message_right" product="tablet">Locate the fingerprint sensor on the right side of your tablet.</string>
+
+    <!-- Lotus settings -->
+    <string name="lotus">Lotus Settings</string>
+    <string name="lotus_settings_summary">Setting</string>
+
 </resources>
