Settings UI : Tint Storage ProgressBar & Redesign Toolbar
Change-Id: I17fc049a0e8276cfcbc34e331581373b74239c51

--- a/res/values/lotus_strings.xml
+++ b/res/values/lotus_strings.xml
@@ -16,6 +16,9 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <!-- Toolbar -->
+    <string name="settings_head_title">Lotus</string>
+
     <!-- Fingerprint location message -->
     <string name="security_settings_fingerprint_enroll_find_sensor_message_front">Locate the fingerprint sensor on the front of your phone.</string>
     <string name="security_settings_fingerprint_enroll_find_sensor_message_left">Locate the fingerprint sensor on the left side of your phone.</string>
