Bring back selinux version
This commit reverts the commit below
https://github.com/DirtyUnicorns/android_packages_apps_Settings/commit/b255b3a6ed4dbda26eb649767134e038045254a3

- Adapted to P

This includes the work previously done by Fan Zhang <zhfan@google.com> since it was introduced in 2012.

Change-Id: Ic371a9ef0055b559eb0b6ff2791291fb82e408cf

--- a/res/values-vi/lotus_strings.xml
+++ b/res/values-vi/lotus_strings.xml
@@ -420,4 +420,10 @@
     <string name="donate">Ủng hộ</string>
     <string name="donate_description">Hỗ trợ chúng tôi</string>
 
+    <!-- Selinux -->
+    <string name="selinux_status">Trạng thái SELinux</string>
+    <string name="selinux_status_disabled">Tắt</string>
+    <string name="selinux_status_permissive">Cho phép</string>
+    <string name="selinux_status_enforcing">Thực thi</string>
+
 </resources>
