--- a/res/values/lotus_strings.xml
+++ b/res/values/lotus_strings.xml
@@ -412,4 +412,10 @@
     <string name="donate">Donate</string>
     <string name="donate_description">Support Us</string>
 
+   <!-- Selinux -->
+    <string name="selinux_status">SELinux status</string>
+    <string name="selinux_status_disabled">Disabled</string>
+    <string name="selinux_status_permissive">Permissive</string>
+    <string name="selinux_status_enforcing">Enforcing</string>
+
 </resources>
