--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -174,6 +174,14 @@
         android:title="@string/fcc_equipment_id"
         android:summary="@string/summary_placeholder"/>
 
+     <!-- SELinux status information -->
+    <Preference
+        android:key="selinux_status"
+        android:order="99"
+        android:title="@string/selinux_status"
+        android:summary="@string/selinux_status_enforcing"
+        android:selectable="false"/>
+
     <!-- Build number -->
     <Preference
         android:key="build_number"
