--- a/res/values-vi/lotus_strings.xml
+++ b/res/values-vi/lotus_strings.xml
@@ -374,4 +374,13 @@
     <string name="app_notification_sound_timeout_value_5_minutes">5 phút</string>
     <string name="app_notification_sound_timeout_value_15_minutes">10 phút</string>
     <string name="app_notification_sound_timeout_value_30_minutes">30 phút</string>
+	
+	<!-- LotusOS info -->
+    <string name="lotus_title">Lotus</string>
+    <string name="lotus_info">Phiên bản Lotus</string>
+    <string name="lotus_maintainer">Người bảo trì</string>
+    <string name="lotus_date">Ngày xây dựng</string>
+    <string name="lotus_type">Kiểu xây dựng</string>
+    <string name="lotus_device">Thiết bị</string>
+    <string name="lotus_version">Phiên bản</string>
 </resources>
