--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -120,6 +120,13 @@
         settings:keywords="@string/keywords_android_version"
         android:summary="@string/summary_placeholder"/>
 
+    <!-- Lotus info -->
+    <Preference
+        android:key="lotus_info"
+        android:order="33"
+        android:title="@string/lotus_info"
+        android:summary="@string/summary_placeholder"/>
+
     <!--IP address -->
     <Preference
         android:key="wifi_ip_address"
