--- a/res/layout/settings_main_dashboard.xml
+++ b/res/layout/settings_main_dashboard.xml
@@ -30,43 +30,12 @@
         android:orientation="vertical"
         android:background="?android:attr/colorPrimary">
 
-        <RelativeLayout
-            android:id="@+id/search_bar_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/settings_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:paddingTop="8dp"
-                android:fontFamily="@font/google_sans_bold"
-                android:text="@string/settings_head_title"
-                android:textColor="?android:attr/colorAccent"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <com.android.settings.dashboard.DashboardProfileIcon
-                android:id="@+id/dashboard_profile_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/settings_title"
-                android:layout_alignParentEnd="true"
-                android:clickable="true"
-                android:focusable="true"
-                android:layout_marginEnd="16dp" />
-
-        </RelativeLayout>
-
         <android.support.v7.widget.CardView
             android:id="@+id/search_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            app:cardCornerRadius="12dp"
+            app:cardCornerRadius="10dp"
             app:cardElevation="0dp">
 
             <Toolbar
@@ -88,6 +57,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/search_menu" />
+
+                <com.android.settings.dashboard.DashboardProfileIcon
+                    android:id="@+id/dashboard_profile_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:layout_marginEnd="6dp" />
             </Toolbar>
         </android.support.v7.widget.CardView>
 
