--- a/res/values/lotus_strings.xml
+++ b/res/values/lotus_strings.xml
@@ -417,4 +417,11 @@
     <string name="selinux_status_permissive">Permissive</string>
     <string name="selinux_status_enforcing">Enforcing</string>
 
+   <!-- Battery Estimate -->
+    <string name="show_battery_estimate_title">Battery Estimate</string>
+    <string name="show_battery_estimate_summary">Show Battery Estimate in QS Panel</string>
+    <string name="battery_estimate_position_title">Battery Estimate Position</string>
+    <string name="battery_estimate_position_qsheader">QS Header</string>
+    <string name="battery_estimate_position_qspanel">QS Panel</string>
+
 </resources>
