--- a/res/values/lotus_arrays.xml
+++ b/res/values/lotus_arrays.xml
@@ -256,15 +256,10 @@
         <item>@string/switch_default</item>
         <item>@string/switch_md2</item>
         <item>@string/switch_oneplus</item>
-        <item>@string/switch_one</item>
-        <item>@string/switch_two</item>
-        <item>@string/switch_three</item>
-        <item>@string/switch_four</item>
-        <item>@string/switch_five</item>
-        <item>@string/switch_six</item>
-        <item>@string/switch_seven</item>
-        <item>@string/switch_eight</item>
-        <item>@string/switch_nine</item>
+        <item>@string/switch_narrow</item>
+        <item>@string/switch_contained</item>
+        <item>@string/switch_retro</item>
+        <item>@string/switch_stockish</item>
     </string-array>
 
     <string-array name="switch_style_values" translatable="false">
@@ -275,11 +270,6 @@
         <item>4</item>
         <item>5</item>
         <item>6</item>
-        <item>7</item>
-        <item>8</item>
-        <item>9</item>
-        <item>10</item>
-        <item>11</item>
     </string-array>
 	
 	<!-- Battery Estimate Style -->
