--- a/res/values/lotus_strings.xml
+++ b/res/values/lotus_strings.xml
@@ -120,7 +120,7 @@
 
     <!-- Notch: Full screen apps -->
     <string name="display_cutout_force_fullscreen_title">Full screen apps</string>
-    <string name="display_cutout_force_fullscreen_summary">Force apps to ignore notch space</string>
+    <string name="display_cutout_force_fullscreen_summary">Ignore notch space for selected applications</string>
 
     <!-- In-call feedback -->
     <string name="incall_feeedback_vibrate_title">Vibrate to indicate call status</string>
@@ -250,7 +250,7 @@
 
     <!-- Lotus settings -->
     <string name="lotus">Lotus Settings</string>
-    <string name="lotus_settings_summary">Whatever it takes to customize your device</string>
+    <string name="lotus_settings_summary">Be respectful of what you have done!</string>
 
     <!-- Notification log -->
     <string name="notification_log_summary">Show notifications history log</string>
