Add Xiaomi Redmi 5A

--- a/res/values/lotus_maintainers.xml
+++ b/res/values/lotus_maintainers.xml
@@ -18,6 +18,7 @@
         <item>wolverine</item>
         <item>saurabhcharde</item>
         <item>Qasim Ali</item>
+        <item>ten¢t</item>
    </string-array>
 
     <!-- Devices maintained by maintainer -->
@@ -26,6 +27,7 @@
         <item>Xiaomi Redmi 3S (land)</item>
         <item>Asus Zenfone Max Pro M1 (X00T/D)</item>
         <item>Xiaomi Redmi Note 5 Pro(whyred)</item>
+        <item>Xiaomi Redmi5A</item>
      </string-array>
 
     <!-- Telegram URL of maintainer -->
@@ -34,6 +36,7 @@
         <item>https://t.me/Wolverine_X99</item>
         <item>https://t.me/SaurabhCharde</item> 
         <item>https://t.me/QasimXAli</item>
+        <item>https://t.me/layixin9</item>
      </string-array>
 
 </resources>
