--- a/res/values/lotus_maintainers.xml
+++ b/res/values/lotus_maintainers.xml
@@ -22,7 +22,8 @@
         <item>Ashok Varma</item>
         <item>Qasim Ali</item>
         <item>ten¢t</item>
-         <item>PriQue77</item>
+        <item>PriQue77</item>
+        <item>sasi2006166</item>
    </string-array>
 
     <!-- Devices maintained by maintainer -->
@@ -35,7 +36,8 @@
         <item>Asus Zenfone Max Pro M2 (X01BD)</item>
         <item>Xiaomi Redmi Note 5 Pro(whyred)</item>
         <item>Xiaomi Redmi5A</item>
-         <item>Xiaomi Redmi Note 7</item>
+        <item>Xiaomi Redmi Note 7</item>
+        <item>Samsung Galaxy J7 2016</item>
      </string-array>
 
     <!-- Telegram URL of maintainer -->
@@ -48,7 +50,8 @@
         <item>https://t.me/TheAshokVarma</item>
         <item>https://t.me/QasimXAli</item>
         <item>https://t.me/layixin9</item>
-         <item>https://t.me/PriQue77</item>
+        <item>https://t.me/PriQue77</item>
+        <item>HTTPS://t.me/sasi2006166<item>
      </string-array>
 
 </resources>
