--- a/res/values/lotus_maintainers.xml
+++ b/res/values/lotus_maintainers.xml
@@ -15,7 +15,7 @@
     <!-- Maintainers -->
     <string-array name="maintainers_title" translatable="false">
         <item>hungphan2001</item>
-        <item>hungphan2001</item>
+        <item>owlcam</item>
         <item>ᗴᖇᏆᑕᏦ ᗴᗩᏀᏞᗴ</item>
         <item>wolverine</item>
         <item>saurabhcharde</item>
@@ -45,7 +45,7 @@
     <!-- Telegram URL of maintainer -->
     <string-array name="maintainers_url" translatable="false">
         <item>https://t.me/hungphan2001</item>
-        <item>https://t.me/hungphan2001</item>
+        <item>https://t.me/owlcam</item>
         <item>https://t.me/NBD_ERICK</item>
         <item>https://t.me/Wolverine_X99</item>
         <item>https://t.me/SaurabhCharde</item> 
