--- a/res/values/lotus_maintainers.xml
+++ b/res/values/lotus_maintainers.xml
@@ -53,7 +53,7 @@
         <item>https://t.me/QasimXAli</item>
         <item>https://t.me/layixin9</item>
         <item>https://t.me/PriQue77</item>
-        <item>https://t.me/sasi2006166<item>
+        <item>https://t.me/sasi2006166</item>
         <item>https://t.me/jbsjoshua007</item>
      </string-array>
 
