--- a/res/xml/power_usage_summary.xml
+++ b/res/xml/power_usage_summary.xml
@@ -54,7 +54,7 @@
         android:key="show_battery_estimate"
         android:title="@string/battery_estimates_title"
         android:summary="@string/battery_estimates_summary"
-        android:defaultValue="false" />
+        android:defaultValue="true" />
 
     <Preference
         android:fragment="com.android.settings.fuelgauge.smartcharging.SmartChargingSettings"
