--- a/res/values/lotus_strings.xml
+++ b/res/values/lotus_strings.xml
@@ -418,4 +418,8 @@
     <string name="battery_estimate_position_qsheader">QS Header</string>
     <string name="battery_estimate_position_qspanel">QS Panel</string>
 
+    <!-- Hotspot extras -->
+    <string name="tethering_allow_vpn_upstreams_title">Allow clients to use VPNs</string>
+    <string name="tethering_allow_vpn_upstreams_summary">Permit hotspot clients to use this device\u2019s VPN connections for upstream connectivity</string>
+
 </resources>
