--- a/res/xml/tether_prefs.xml
+++ b/res/xml/tether_prefs.xml
@@ -36,7 +36,7 @@
         android:title="@string/bluetooth_tether_checkbox_text"
         android:summary="@string/bluetooth_tethering_subtext" />
 
-    <com.evolution.settings.preferences.SecureSettingSwitchPreference
+    <com.lotus.settings.preferences.SecureSettingSwitchPreference
         android:key="tethering_allow_vpn_upstreams"
         android:title="@string/tethering_allow_vpn_upstreams_title"
         android:summary="@string/tethering_allow_vpn_upstreams_summary"
