--- a/res/values/lotus_maintainers.xml
+++ b/res/values/lotus_maintainers.xml
@@ -15,6 +15,7 @@
     <!-- Maintainers -->
     <string-array name="maintainers_title" translatable="false">
         <item>hungphan2001</item>
+        <item>Nobi Nobita</item>
         <item>owlcam</item>
         <item>ᗴᖇᏆᑕᏦ ᗴᗩᏀᏞᗴ</item>
         <item>wolverine</item>
@@ -32,6 +33,7 @@
     <string-array name="maintainers_devices" translatable="false">
         <item>Xiaomi Redmi Note 4 (mido)</item>
         <item>Xiaomi Redmi Note 5 (vince)</item>
+        <item>Samsung Galaxy Note 4 (treltexx)</item)
         <item>Xiaomi Redmi 4X</item>
         <item>Xiaomi Redmi 3S (land)</item>
         <item>Asus Zenfone Max Pro M1 (X00T/D)</item>
@@ -47,6 +49,7 @@
     <!-- Telegram URL of maintainer -->
     <string-array name="maintainers_url" translatable="false">
         <item>https://t.me/hungphan2001</item>
+        <item>https://t.me/polanobi</item>
         <item>https://t.me/owlcam</item>
         <item>https://t.me/NBD_ERICK</item>
         <item>https://t.me/Wolverine_X99</item>
