--- a/res/values/lotus_maintainers.xml
+++ b/res/values/lotus_maintainers.xml
@@ -33,7 +33,7 @@
     <string-array name="maintainers_devices" translatable="false">
         <item>Xiaomi Redmi Note 4 (mido)</item>
         <item>Xiaomi Redmi Note 5 (vince)</item>
-        <item>Samsung Galaxy Note 4 (treltexx)</item)
+         <item>Samsung Galaxy Note 4 (treltexx)</item>
         <item>Xiaomi Redmi 4X</item>
         <item>Xiaomi Redmi 3S (land)</item>
         <item>Asus Zenfone Max Pro M1 (X00T/D)</item>
