--- a/res/values/lotus_maintainers.xml
+++ b/res/values/lotus_maintainers.xml
@@ -14,19 +14,7 @@
     <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Maintainers -->
     <string-array name="maintainers_title" translatable="false">
-        <item>hungphan2001</item>
         <item>Nobi Nobita</item>
-        <item>owlcam</item>
-        <item>ᗴᖇᏆᑕᏦ ᗴᗩᏀᏞᗴ</item>
-        <item>wolverine</item>
-        <item>saurabhcharde</item>
-        <item>Ashok Varma</item>
-        <item>Qasim Ali</item>
-        <item>ten¢t</item>
-        <item>PriQue77</item>
-        <item>sasi2006166</item>
-        <item>jbsjoshua007</item>
-        <item>Speedhorn</item>
    </string-array>
 
     <!-- Devices maintained by maintainer -->
@@ -35,11 +23,13 @@
         <item>Xiaomi Redmi Note 5 (vince)</item>
         <item>Samsung Galaxy Note 4 (treltexx)</item)
         <item>Xiaomi Redmi 4X</item>
+        <item>Xiaomi Redmi K20 ( Davinchi )</item>
+        <item>Xiaomi Redmi K20 Pro ( Raphael )</item)
         <item>Xiaomi Redmi 3S (land)</item>
         <item>Asus Zenfone Max Pro M1 (X00T/D)</item>
         <item>Asus Zenfone Max Pro M2 (X01BD)</item>
         <item>Xiaomi Redmi Note 5 Pro(whyred)</item>
-        <item>Xiaomi Redmi5A</item>
+        <item>Xiaomi Redmi 5A</item>
         <item>Xiaomi Redmi Note 7</item>
         <item>Samsung Galaxy J7 2016</item>
         <item>Samsung Galaxy J7 Prime</item>
@@ -48,19 +38,7 @@
 
     <!-- Telegram URL of maintainer -->
     <string-array name="maintainers_url" translatable="false">
-        <item>https://t.me/hungphan2001</item>
         <item>https://t.me/polanobi</item>
-        <item>https://t.me/owlcam</item>
-        <item>https://t.me/NBD_ERICK</item>
-        <item>https://t.me/Wolverine_X99</item>
-        <item>https://t.me/SaurabhCharde</item> 
-        <item>https://t.me/TheAshokVarma</item>
-        <item>https://t.me/QasimXAli</item>
-        <item>https://t.me/layixin9</item>
-        <item>https://t.me/PriQue77</item>
-        <item>https://t.me/sasi2006166</item>
-        <item>https://t.me/jbsjoshua007</item>
-        <item>https://t.me/Speedhorn</item>
      </string-array>
 
 </resources>
