--- a/res/values/lotus_maintainers.xml
+++ b/res/values/lotus_maintainers.xml
@@ -22,10 +22,10 @@
     <string-array name="maintainers_devices" translatable="false">
         <item>Xiaomi Redmi Note 4 (mido)</item>
         <item>Xiaomi Redmi Note 5 (vince)</item>
-        <item>Samsung Galaxy Note 4 (treltexx)</item)
+        <item>Samsung Galaxy Note 4 (treltexx)</item>
         <item>Xiaomi Redmi 4X</item>
         <item>Xiaomi Redmi K20 ( Davinchi )</item>
-        <item>Xiaomi Redmi K20 Pro ( Raphael )</item)
+        <item>Xiaomi Redmi K20 Pro ( Raphael )</item>
         <item>Xiaomi Redmi 3S (land)</item>
         <item>Asus Zenfone Max Pro M1 (X00T/D)</item>
         <item>Asus Zenfone Max Pro M2 (X01BD)</item>
