--- a/res/xml/traffic.xml
+++ b/res/xml/traffic.xml
@@ -16,20 +16,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-    <com.pe.support.preference.SystemSettingSwitchPreference
+    <com.android.support.preference.SystemSettingSwitchPreference
         android:key="network_traffic_state"
         android:title="@string/network_traffic_state_title"
         android:defaultValue="true" />
 
 
-    <com.pe.support.preference.SystemSettingSwitchPreference
+    <com.android.support.preference.SystemSettingSwitchPreference
         android:key="network_traffic_hidearrow"
         android:title="@string/network_traffic_hidearrow"
         android:summary="@string/network_traffic_hidearrow_summary"
         android:dependency="network_traffic_state"
         android:defaultValue="false" />
 
-    <com.pe.support.preference.CustomSeekBarPreference
+    <com.android.support.preference.CustomSeekBarPreference
         android:key="network_traffic_autohide_threshold"
         android:title="@string/network_traffic_autohide_threshold_title"
         android:max="10"
