--- a/res/drawable/ic_settings_lotus.xml
+++ b/res/drawable/ic_settings_lotus.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
     Copyright (C) 2016-2017 AOSiP
+    Copyright (C) 2020-2021 LotusOS
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
