--- a/res/values/android_colors.xml
+++ b/res/values/android_colors.xml
@@ -25,7 +25,7 @@
     <string name="theme_customization_icon_shape_title">Icon shape</string>
     <!-- [CHAR_LIMIT=NONE] Developer Settings: Label for the option that turns off customizations for a given category.-->
     <string name="theme_customization_device_default">Device default</string>
-    <!-- PixelGoodies settings icon background-->
-    <color name="homepage_pixelgoodies_background">#ff6868</color>
+    <!-- LotusOS settings icon background-->
+    <color name="homepage_lotus_background">#ff6868</color>
 
 </resources>
