--- a/res/xml/top_level_settings.xml
+++ b/res/xml/top_level_settings.xml
@@ -47,12 +47,12 @@
         android:fragment="com.android.settings.applications.AppAndNotificationDashboardFragment"/>
 
     <Preference
-        android:key="top_level_pixelgoodies"
-        android:title="@string/pixelgoodies_title"
-        android:summary="@string/pixelgoodies_activity_summary"
-        android:icon="@drawable/ic_homepage_pixelgoodies"
+        android:key="top_level_lotus"
+        android:title="@string/lotus_title"
+        android:summary="@string/lotus_activity_summary"
+        android:icon="@drawable/ic_homepage_lotus"
         android:order="-95"
-        android:fragment="com.pe.pixelgoodies.PixelGoodiesSettings"/>
+        android:fragment="com.android.lotus.LotusSettings"/>
 
     <Preference
         android:key="top_level_battery"
